# OldProjects

Project-3-mac-/: LICENSE  README.md
Project-3-mac-/TunnelMan-skeleton-mac/DerivedData/ModuleCache.noindex/: Session.modulevalidation
Project-3-mac-/TunnelMan-skeleton-mac/DerivedData/TunnelMan/: info.plist
Project-3-mac-/TunnelMan-skeleton-mac/DerivedData/TunnelMan/Index/: build-description.json
Project-3-mac-/TunnelMan-skeleton-mac/DerivedData/TunnelMan/Logs/Index Build/: 01CB95E2-8B26-4FCE-9E09-0545B9E729B5.xcactivitylog  0BA6729D-23F7-4853-B522-C961480E9971.xcactivitylog  1FE15162-6B75-4BB7-AE41-EB6C233C51F4.xcactivitylog  2349F2D5-11EF-4681-965B-1F5CA11EC7D1.xcactivitylog  2C1096B5-39CA-49BC-8AEB-E235D649B8BB.xcactivitylog  4870CAF5-85DF-4646-B16F-355E09FE76DA.xcactivitylog  67B377C9-D7BB-4B6C-AFE0-21FC5EBB7402.xcactivitylog  7E7698F6-C24E-4CAB-9ED1-537EDDE2FC90.xcactivitylog  A7640371-3A5F-4957-A4C4-B2D227031485.xcactivitylog  CF870335-54F8-468B-978E-95E9C7B443CC.xcactivitylog  D0E7CF23-8745-4A7E-BAA0-07ED75AFAC85.xcactivitylog  (+1 more)
Project-3-mac-/TunnelMan-skeleton-mac/DerivedData/TunnelMan/SymbolCache/: project.plist
Project-3-mac-/TunnelMan-skeleton-mac/DerivedData/TunnelMan/TextIndex/: TextFragmentIndex-v8.idx
Project-3-mac-/TunnelMan-skeleton-mac/TunnelMan/: Actor.h  StudentWorld.cpp  StudentWorld.h  main.cpp
Project-3-mac-/TunnelMan-skeleton-mac/TunnelMan.xcodeproj/: project.pbxproj
tm-part-1-finished/: Actor.cpp  Actor.h  CMakeLists.txt  LeftOverNotes.txt  StudentWorld.cpp  StudentWorld.h  TunnelMan.vcxproj  TunnelMan.vcxproj.filters.txt
(+69 files in other folders)
